- Merge: Fixed bug #49483 (preg_replace 'subject' parameter listed as optional)